# social_app

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TEST_PYRAMID_IMPLEMENTATION.md  docker-compose.yml  generate-certs.sh  nginx.conf
.github/workflows/: ci.yml
backend/: .flake8  Dockerfile  api_spec.json  app.py  config.py  get_user_email.py  models.py  populate_db.py  pyproject.toml  requirements.txt  socialapp-frontend-socialapp-backend.json
backend/tests/: test_app.py  test_likes_comments.py  test_models.py  test_notifications.py  test_populate_db.py  test_posts.py
backend/tests/contract/: test_api_contract.py  test_api_documentation.py
backend/tests/integration/: test_database_integration.py
database/: Dockerfile  init-db.sql
frontend/: .flake8  .gitignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml  pytest.ini  report.json  requirements.txt
frontend/core/: apps.py  forms.py  tests.py  urls.py  views.py
frontend/core/static/css/: style.css
frontend/core/templates/: base.html
frontend/core/templates/core/: home.html  login.html  registration.html
frontend/posts_app/: apps.py  tests.py  urls.py  views.py
frontend/posts_app/templates/posts_app/: add_post.html  post_list.html
frontend/social_frontend/: asgi.py  auth_backends.py  settings.py  urls.py  wsgi.py
frontend/tests/integration/: test_frontend_backend_integration.py
frontend/tests/ui/: test_authentication_fixed.py  test_debug.py  test_login_debug.py  test_user_workflows.py  test_user_workflows_broken_original.py  test_user_workflows_fixed.py
scripts/: run_all_tests.sh  shakedown_test.sh
tests/performance/: load_test.js  stress_test.js
